# doxi

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs.solidjs.com/concepts/: effects.md
docs.solidjs.com/concepts/control-flow/: portal.md
docs.solidjs.com/configuration/: typescript.md
docs.solidjs.com/guides/: complex-state-management.md  fetching-data.md
docs.solidjs.com/guides/deployment-options/: firebase.md  vercel.md
docs.solidjs.com/reference/basic-reactivity/: create-memo.md
docs.solidjs.com/reference/components/: show.md
docs.solidjs.com/reference/jsx-attributes/: once.md
docs.solidjs.com/reference/reactive-utilities/: batch.md  run-with-owner.md
docs.solidjs.com/reference/rendering/: hydration-script.md
docs.solidjs.com/reference/secondary-primitives/: create-computed.md  create-deferred.md  create-render-effect.md
docs.solidjs.com/reference/store-utilities/: create-store.md
examples/docs.solidjs.com/: index.md  quick-start.md
examples/docs.solidjs.com/advanced-concepts/: fine-grained-reactivity.md
examples/docs.solidjs.com/concepts/: context.md  intro-to-reactivity.md  refs.md  signals.md  stores.md  understanding-jsx.md
examples/docs.solidjs.com/concepts/components/: basics.md  class-style.md  (+2 more)
examples/docs.solidjs.com/configuration/: environment-variables.md
examples/docs.solidjs.com/guides/: deploying-your-app.md  routing-and-navigation.md  state-management.md  styling-your-components.md  testing.md
src/doxi/: __init__.py  cli.py  core.py  errors.py  link_extractor.py  logging.py  utils.py
(+80 files in other folders)
