[project]
name = "doxi"
version = "0.2.0"
description = "A tool to scrape documentation and convert it to markdown."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "requests",
    "lxml>=5.3.0",
    "certifi>=2024.7.4",
    "tqdm>=4.66.5",
    "fire>=0.6.0",
]

[project.scripts]
doxi = "doxi.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
